# streamdeck-hid-rs

./: .gitignore  Cargo.toml  README.md  coverage.sh
.github/workflows/: check-and-lint.yaml  lint-test-release-crate.yaml  release-packaging.yaml  tests.yaml
examples/: list_streamdecks.rs  on_button_events.rs  read_and_write.rs  set_brightness.rs  set_button_image.rs
src/: device.rs  error.rs  hid_api_traits.rs  image.rs  lib.rs  type_info.rs
